--- a/index.html
+++ b/index.html
@@ -1,129 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
 
-
-<!-- <nav class="navbar navbar-toggleable-sm bg-faded navbar-inverse">
-  <div class="container">
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#mainNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="mainNav">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home</a>
-        <a class="nav-item nav-link" href="#">About</a>
-        <a class="nav-item nav-link" href="#">Training</a>
-        <a class="nav-item nav-link" href="#">Contact</a>
-      </div>
-    </div>
-  </div>
-</nav> -->
-
-
-
-<nav class="nav justify-content-center bg-info">
-  <a class="nav-item nav-link text-white lead" href="#">Active</a>
-  <a class="nav-item nav-link text-white lead" href="#">Link</a>
-  <a class="nav-item nav-link text-white lead" href="#">Link</a>
-  <a class="nav-item nav-link text-white lead" href="#">Disabled</a>
+<nav class="nav justify-content-center bg-dark py-3 fixed-top">
+  <a class="nav-item nav-link text-white" href="#">Services</a>
+  <a class="nav-item nav-link text-white" href="#">Tints</a>
+  <a class="nav-item nav-link text-white" href="#">Showroom</a>
+  <a class="nav-item nav-link text-white" href="#">Contact</a>
 </nav>
 
-
-
-
-
-
-
-<div class="jumbotron jumbotron-fluid bg-info text-white text-center">
-  <div class="container">
-    <h1 class="display-1">hello world welcome to page</h1>
-    <p class="lead">This is also related to my page.</p>
+<div class="jumbotron container-fluid text-white text-center">
+  <div class="headline-wrapper container d-flex justify-content-center">
+    <h1 class="display-1 headline1">Tint Company</h1>
+    <p class="lead headline2">The best tint service in Southern California.</p>
   </div>
 </div>
 
-<div class="container text-muted">
+<div class="container text-center text-muted py-5">
   <div class="row">
-    <div class="col-md-6 col-lg-3">
+    <div class="col-md-4">
       <div class="card">
-        <img src="./img/node.png" class="card-img-top img-fluid"/>
+        <img src="./img/building.png" class="card-img-top img-fluid"/>
         <div class="card-body">
-          <h3 class="card-title">Node JS Training</h3>
-          <p>Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
+          <h3 class="card-title lead">Commercial & Residential Tint</h3>
+          <p>We offer quick and professional tint installation for your home or business.</p>
         </div>
       </div>
     </div>
-    <div class="col-md-6 col-lg-3">
+    <div class="col-md-4">
       <div class="card">
-        <img src="./img/node.png" class="card-img-top img-fluid"/>
+        <img src="./img/car.png" class="card-img-top img-fluid"/>
         <div class="card-body">
-          <h3 class="card-title">Node JS Training</h3>
-          <p>Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
+          <h3 class="card-title lead">Automobile Tint</h3>
+          <p>We have been specializing in automobile tinting for over 15 years. We have serviced all makes and models ranging from Teslas to Lamborghinis.</p>
         </div>
       </div>
     </div>
-    <div class="col-md-6 col-lg-3">
+    <div class="col-md-4">
       <div class="card">
-        <img src="./img/node.png" class="card-img-top img-fluid"/>
+        <img src="./img/audio.png" class="card-img-top img-fluid"/>
         <div class="card-body">
-          <h3 class="card-title">Node JS Training</h3>
-          <p>Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-3">
-      <div class="card">
-        <img src="./img/node.png" class="card-img-top img-fluid"/>
-        <div class="card-body">
-          <h3 class="card-title">Node JS Training</h3>
-          <p>Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore</p>
+          <h3 class="card-title lead">Audio & Alarm Installation</h3>
+          <p>We offer a wide variety of entertainment systems and high-security alarm systems to protect your vehicle.</p>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <h2 class="display-4 text-center py-5 my-4"> Meet the Speakers</h2>
-
-  <nav class="nav justify-content-center nav-pills flex-column flex-md-row">
-    <a class="nav-link active" href="#ninja" data-toggle="tab">The Net Ninja</a>
-    <a class="nav-link" href="#wizard" data-toggle="tab">Jabba the Hot</a>
-    <a class="nav-link" href="#captain" data-toggle="tab">Hoochie Mama San</a>
-    <a class="nav-link" href="#avenger" data-toggle="tab">George J Bushy</a></a>
-  </nav>
-
-  <div class="tab-content py-5">
-    <div class="tab-pane active" id="ninja">
-      <h3>The yo mama</h3>
-      <p>Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore sed diam nonummy nibh euismod tincidunt ut laoreet</p>
-    </div>
-    <div class="tab-pane" id="wizard">
-      <h3>The Net waterbug</h3>
-      <p>Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore sed diam nonummy nibh euismod tincidunt ut laoreet</p>
-    </div>
-    <div class="tab-pane" id="captain">
-      <h3>The hello hello Ninja</h3>
-      <p>Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore sed diam nonummy nibh euismod tincidunt ut laoreet</p>
-    </div>
-    <div class="tab-pane" id="avenger">
-      <h3>The Net chiken nuggets</h3>
-      <p>Lorem ninja ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore sed diam nonummy nibh euismod tincidunt ut laoreet</p>
+<h2 class="display-4 text-center py-5 my-4">Tint Options</h2>
+<div class="container py-5 text-white">
+  <div class="card">
+    <div class="card-body d-flex flex-row justify-content-around text-dark">
+        <p>Product Name</p>
+        <p>Visible Light Transmittance</p>
+        <p>Visible Light Reflectane</p>
+        <p>Total Solar Energy Rejected</p>
     </div>
   </div>
-
+  <div class="card">
+    <div class="tint-1 card-body d-flex flex-row justify-content-around">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="tint-2 card-body d-flex flex-row justify-content-around">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="tint-3 card-body d-flex flex-row justify-content-around">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="tint-4 card-body d-flex flex-row justify-content-around">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
 </div>
 
 
+<h2 class="display-4 text-center py-5 my-4">Showroom</h2>
+<div class="container d-flex flex-row flex-wrap">
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar1.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar2.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar3.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar4.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar5.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar6.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar7.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar8.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar9.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar7.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar8.jpg" />
+  </div>
+  <div class="showroom col-md-4 col-lg-3">
+    <img class="img-fluid" src="./img/showcar9.jpg" />
+  </div>
+</div>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+<h2 class="display-4 text-center py-5 my-4">Contact Us</h2>
+<div class="container-fluid">
+  <div class="google-map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.1103316234303!2d-117.87967908478593!3d34.015378780616004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c32bcaaf000601%3A0xa27b36e0d34e9fa6!2s19488+Avenida+Del+Sol%2C+Walnut%2C+CA+91789!5e0!3m2!1sen!2sus!4v1507156037375" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+</div>
+  <script id="setmore_script" type="text/javascript" src="https://my.setmore.com/js/iframe/setmore_iframe.js"></script><a id="Setmore_button_iframe" style="float:none; position: fixed; right: -2px; top: 25%; display: block; z-index: 20000" href="https://my.setmore.com/bookingpage/f76af607-a248-46dd-88de-93f0f62d6f11"><img border="none" src="https://my.setmore.com/images/bookappt/Setmore-Book-Now.png" alt="Book an appointment with Tint Zone using SetMore" /></a>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvHmFLQidrIccKoi7M4_TkHERg4-av_ZE&callback=initMap"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   </body>
 </html>
