--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
   <a class="nav-item nav-link text-white" href="#">Tints</a>
   <a class="nav-item nav-link text-white" href="#">Showroom</a>
   <a class="nav-item nav-link text-white" href="#">Contact</a>
+  <ul class="nav navbar-nav navbar-right">
+    <li><a class="nav-item text-white navbar-right">Hours: Mon-Sat 9:00am - 5:00pm</a></li>
+  </ul>
 </nav>
 
 <div class="jumbotron container-fluid text-white text-center">
   <div class="headline-wrapper container d-flex justify-content-center">
-    <h1 class="display-1 headline1">Tint Company</h1>
-    <p class="lead headline2">The best tint service in Southern California.</p>
+    <!-- <h1 class="display-1 headline1">Tint Company</h1> -->
+    <img src="./img/fulllogotrans.png" class="headline1"/>
+    <!-- <p class="lead headline2">The best tint service in Southern California.</p> -->
   </div>
 </div>
 
@@ -140,11 +144,12 @@
 </div>
 
 <h2 class="display-4 text-center py-5 my-4">Contact Us</h2>
-<div class="container-fluid">
+<div class="container-fluid google-map">
   <div class="google-map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.1103316234303!2d-117.87967908478593!3d34.015378780616004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c32bcaaf000601%3A0xa27b36e0d34e9fa6!2s19488+Avenida+Del+Sol%2C+Walnut%2C+CA+91789!5e0!3m2!1sen!2sus!4v1507156037375" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.666345638485!2d-117.84301398433885!3d33.691702680705404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcde99b24f399f%3A0x15e653af6601cebb!2s17145+Von+Karman+Ave+%23110%2C+Irvine%2C+CA+92614!5e0!3m2!1sen!2sus!4v1507240577667" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </div>
+
   <script id="setmore_script" type="text/javascript" src="https://my.setmore.com/js/iframe/setmore_iframe.js"></script><a id="Setmore_button_iframe" style="float:none; position: fixed; right: -2px; top: 25%; display: block; z-index: 20000" href="https://my.setmore.com/bookingpage/f76af607-a248-46dd-88de-93f0f62d6f11"><img border="none" src="https://my.setmore.com/images/bookappt/Setmore-Book-Now.png" alt="Book an appointment with Tint Zone using SetMore" /></a>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvHmFLQidrIccKoi7M4_TkHERg4-av_ZE&callback=initMap"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
