--- a/index.html
+++ b/index.html
@@ -57,6 +57,43 @@
   </div>
 </div>
 
+
+<div class="container polygon-wrapper d-flex">
+  <div class="polygon poly-1">
+    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="polygon poly-2">
+    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="polygon poly-3">
+    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="polygon poly-4">
+    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+</div>
+
+
 <h2 class="display-4 text-center py-5 my-4">Tint Options</h2>
 <div class="container py-5 text-white">
   <div class="card">
