--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Coda|Heebo|Orbitron|Oxygen|Quattrocento+Sans|Russo+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Black+Ops+One|Jockey+One|Racing+Sans+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron|Poppins|Roboto" rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   </head>
   <body>
 
 <nav class="navbar-default d-flex flex-row justify-content-center py-3 fixed-top">
-  <a class="nav-item nav-link text-white" href="#">Services</a>
-  <a class="nav-item nav-link text-white" href="#">Tints</a>
-  <a class="nav-item nav-link text-white" href="#">Showroom</a>
-  <a class="nav-item nav-link text-white" href="#">Contact</a>
+  <a class="nav-item nav-link text-white" href="#one">Services</a>
+  <a class="nav-item nav-link text-white" href="#two">Tints</a>
+  <a class="nav-item nav-link text-white" href="#three">Showroom</a>
+  <a class="nav-item nav-link text-white" href="#four">Contact</a>
 </nav>
 
 <div class="jumbotron container-fluid text-white text-center">
@@ -25,10 +24,11 @@
   </div>
 </div>
 
-<div class="container text-center text-muted py-5">
+<h2 id="one" class="display-4 text-center py-5 my-4">Our Services</h2></h2>
+<div class="container-fluid text-center text-muted py-5 about-us">
   <div class="row">
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card-info">
+    <div class="col-md-4 d-flex align-items-stretch service-card">
+      <div class="card-info card-1">
         <img src="./img/showcar4.jpg" class="card-img-top img-fluid"/>
         <div class="card-body">
           <h3 class="card-title lead">Commercial & Residential Tint</h3>
@@ -36,8 +36,8 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card-info">
+    <div class="col-md-4 d-flex align-items-stretch service-card">
+      <div class="card-info card-2">
         <img src="./img/showcar5.jpg" class="card-img-top img-fluid"/>
         <div class="card-body">
           <h3 class="card-title lead">Automobile Tint</h3>
@@ -45,8 +45,8 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 d-flex align-items-stretch">
-      <div class="card-info">
+    <div class="col-md-4 d-flex align-items-stretch service-card">
+      <div class="card-info card-3">
         <img src="./img/showcar7.jpg" class="card-img-top img-fluid"/>
         <div class="card-body">
           <h3 class="card-title lead">Audio & Alarm Installation</h3>
@@ -57,54 +57,19 @@
   </div>
 </div>
 
-
-<div class="container polygon-wrapper d-flex">
-  <div class="polygon poly-1">
-    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
-      <p>SUPREME 40</p>
-      <p>37</p>
-      <p>6</p>
-      <p>29</p>
+<h2 id="two" class="display-4 text-center py-5 my-4">Tint Options</h2>
+<div class="container-fluid py-5 text-white tint-options">
+  <div class="card tint-card">
+    <div class="tint-0 card-body d-flex flex-row justify-content-around">
+      <ul class="d-flex flex-row justify-content-around">
+        <li>Product Name</li>
+        <li>Light Transmittance</li>
+        <li>Light Reflectane</li>
+        <li>Solar Energy Rejected</li>
+      </ul>
     </div>
   </div>
-  <div class="polygon poly-2">
-    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
-      <p>SUPREME 40</p>
-      <p>37</p>
-      <p>6</p>
-      <p>29</p>
-    </div>
-  </div>
-  <div class="polygon poly-3">
-    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
-      <p>SUPREME 40</p>
-      <p>37</p>
-      <p>6</p>
-      <p>29</p>
-    </div>
-  </div>
-  <div class="polygon poly-4">
-    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
-      <p>SUPREME 40</p>
-      <p>37</p>
-      <p>6</p>
-      <p>29</p>
-    </div>
-  </div>
-</div>
-
-
-<h2 class="display-4 text-center py-5 my-4">Tint Options</h2>
-<div class="container py-5 text-white">
-  <div class="card">
-    <div class="card-body d-flex flex-row justify-content-around text-dark">
-        <p>Product Name</p>
-        <p>Visible Light Transmittance</p>
-        <p>Visible Light Reflectane</p>
-        <p>Total Solar Energy Rejected</p>
-    </div>
-  </div>
-  <div class="card">
+  <div class="card tint-card">
     <div class="tint-1 card-body d-flex flex-row justify-content-around">
       <p>SUPREME 40</p>
       <p>37</p>
@@ -112,7 +77,7 @@
       <p>29</p>
     </div>
   </div>
-  <div class="card">
+  <div class="card tint-card">
     <div class="tint-2 card-body d-flex flex-row justify-content-around">
       <p>SUPREME 40</p>
       <p>37</p>
@@ -120,7 +85,7 @@
       <p>29</p>
     </div>
   </div>
-  <div class="card">
+  <div class="card tint-card">
     <div class="tint-3 card-body d-flex flex-row justify-content-around">
       <p>SUPREME 40</p>
       <p>37</p>
@@ -128,7 +93,7 @@
       <p>29</p>
     </div>
   </div>
-  <div class="card">
+  <div class="card tint-card">
     <div class="tint-4 card-body d-flex flex-row justify-content-around">
       <p>SUPREME 40</p>
       <p>37</p>
@@ -138,8 +103,8 @@
   </div>
 </div>
 
-<h2 class="display-4 text-center py-5 my-4">Showroom</h2>
-<div class="container d-flex flex-row flex-wrap">
+<h2 id="three" class="display-4 text-center py-5 my-4">Showroom</h2>
+<div class="container-fluid showroom-wrapper d-flex flex-row flex-wrap">
   <div class="showroom col-md-4 col-lg-3">
     <img class="img-fluid" src="./img/showcar1.jpg" />
   </div>
@@ -178,23 +143,59 @@
   </div>
 </div>
 
-<h2 class="display-4 text-center py-5 my-4">Contact Us</h2>
+<h2 id="four" class="display-4 text-center py-5 my-4">Contact Us</h2>
 <div class="container-fluid google-map">
   <div class="google-map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.666345638485!2d-117.84301398433885!3d33.691702680705404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcde99b24f399f%3A0x15e653af6601cebb!2s17145+Von+Karman+Ave+%23110%2C+Irvine%2C+CA+92614!5e0!3m2!1sen!2sus!4v1507240577667" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </div>
-  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+
   <script>
-    window.sr = scrollReveal();
-    sr.reveal('.headline1', {
-      duration: 2000,
+    window.sr = ScrollReveal();
+    sr.reveal('.headline1',{
+      origin: 'left',
+      distance: '40px',
+      duration: 2500,
+      easing: 'ease'
+    });
+    sr.reveal('.headline2',{
+      origin: 'right',
+      distance: '40px',
+      duration: 2500,
+      easing: 'ease'
+    });
+    sr.reveal('.about-us',{
+      origin: 'bottom',
+      distance: '50px',
+      duration: 1500,
+      easing: 'ease',
+      viewFactor: 0.5
+    });
+    sr.reveal('.tint-card',{
       origin: 'top',
-      distance: '100px'
+      distance: '70px',
+      duration: 1500,
+      delay: 100,
+      easing: 'ease',
+      viewFactor: 0.6
+    });
+    sr.reveal('.showroom',{
+      origin: 'right',
+      distance: '70px',
+      duration: 2500,
+      easing: 'ease',
+      viewFactor: 0.3
     });
   </script>
 
+  <script>
+    let scroll = new SmoothScroll('a[href*="#"]', {
+      speed: 3000,
+      easing: 'Linear'
+    });
+  </script>
 
+  <script src="dist/js/smooth-scroll.js"></script>
   <script id="setmore_script" type="text/javascript" src="https://my.setmore.com/js/iframe/setmore_iframe.js"></script><a id="Setmore_button_iframe" style="float:none; position: fixed; right: -2px; top: 25%; display: block; z-index: 20000" href="https://my.setmore.com/bookingpage/f76af607-a248-46dd-88de-93f0f62d6f11"><img border="none" src="https://my.setmore.com/images/bookappt/Setmore-Book-Now.png" alt="Book an appointment with Tint Zone using SetMore" /></a>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvHmFLQidrIccKoi7M4_TkHERg4-av_ZE&callback=initMap"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
