--- a/snippets.html
+++ b/snippets.html
@@ -48,3 +48,39 @@
     </div>
   </div>
 </nav>
+
+
+<!-- <div class="container polygon-wrapper d-flex">
+  <div class="polygon poly-1">
+    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="polygon poly-2">
+    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="polygon poly-3">
+    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+  <div class="polygon poly-4">
+    <div class="polygon-card d-flex flex-column justify-content-center text-center text-white">
+      <p>SUPREME 40</p>
+      <p>37</p>
+      <p>6</p>
+      <p>29</p>
+    </div>
+  </div>
+</div> -->
